--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/kcubeterm/achoz#readme",
   "dependencies": {
     "officeparser": "^2.2.2",
+    "pdf2json": "^1.2.3",
     "xml2js": "^0.4.23"
   }
 }
