crawler: added html handler

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/kcubeterm/achoz#readme",
   "dependencies": {
+    "html-to-text": "^8.0.0",
     "officeparser": "^2.2.2",
     "pdf2json": "^1.2.3",
     "xml2js": "^0.4.23"
