--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "html-to-text": "^8.0.0",
     "officeparser": "^2.2.2",
     "pdf2json": "^1.2.3",
+    "pug": "^3.0.2",
     "xml2js": "^0.4.23"
   }
 }
