--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.17.1",
     "hidefile": "3.0.0",
     "html-to-text": "8.0.0",
+    "node-fetch": "^2.6.6",
     "officeparser": "2.2.2",
     "pdf2json": "1.2.3",
     "xml2js": "0.4.23"
