--- a/package.json
+++ b/package.json
@@ -29,6 +29,10 @@
     "pdf2json": "1.2.3",
     "xml2js": "0.4.23"
   },
-  "os": ["linux"],
-  "cpu":["x64"]
+  "os": [
+    "linux"
+  ],
+  "cpu": [
+    "x64"
+  ]
 }
