added postinstall script... so that typesense server could install from npm itself

--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
   "name": "achoz",
-  "version": "0.1.0",
+  "version": "0.1.2",
   "description": "Search your documents like heaven",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "./postinstall.js"
+  },
+  "bin": {
+    "achoz": "./cli.js",
+    "typesense-achoz": "bin/typesense-achoz"
   },
   "repository": {
     "type": "git",
