--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "achoz",
   "version": "0.1.2",
-  "description": "Search your documents like heaven",
-  "main": "index.js",
+  "description": "Search through your all data efficiently",
+  "main": "cli.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "postinstall": "./postinstall.js"
@@ -16,7 +16,7 @@
     "url": "git+https://github.com/kcubeterm/achoz.git"
   },
   "keywords": [
-    "search-engines"
+    "search-engines","file-searcher","search-pdf", "search documents"
   ],
   "author": "Kcubeterm",
   "license": "MIT",
@@ -26,6 +26,7 @@
   "homepage": "https://github.com/kcubeterm/achoz#readme",
   "dependencies": {
     "app-root-path": "3.0.0",
+    "download": "^8.0.0",
     "express": "^4.17.1",
     "hidefile": "3.0.0",
     "html-to-text": "8.0.0",
