--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "achoz",
-  "version": "0.1.7",
+  "version": "0.1.10",
   "description": "Search through your all data efficiently",
   "main": "cli.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "./postinstall.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": {
     "achoz": "./cli.js"
