--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "achoz",
-  "version": "0.1.21",
-  "description": "Search through your all data efficiently",
+  "version": "0.1.25",
+  "description": "Search through your all data efficiently like websearch",
   "main": "cli.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -27,15 +27,10 @@
   "homepage": "https://github.com/kcubeterm/achoz#readme",
   "dependencies": {
     "app-root-path": "3.0.0",
-    "commander": "^8.3.0",
-    "download": "^8.0.0",
     "express": "^4.17.1",
     "hidefile": "3.0.0",
     "html-to-text": "8.0.0",
     "node-fetch": "^2.6.6",
-    "officeparser": "2.2.2",
-    "pdf2json": "1.2.3",
-    "targz": "^1.0.1",
-    "xml2js": "0.4.23"
+    "officeparser": "2.2.2"
   }
 }
