--- a/config.json
+++ b/config.json
@@ -2,6 +2,7 @@
   "DirToIndex": [
       "/home/kcubeterm/project/achoz"
   ],
+  "SearchEngine": "meilisearch",
   "TypesenseHost": "http://localhost:8909",
   "TypesenseApi": "6Y4AVUSiwkNcReCpWFBouK2qbPSWniWXHq8CRaOb",
   "AchozPort": 9097
